k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-innovations-housnav-web-deployment
  labels:
    app: house-innovations-housnav-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: house-innovations-housnav-web
  template:
    metadata:
      labels:
        app: house-innovations-housnav-web
    spec:
      imagePullSecrets: 
        - name: ${IMAGE_PULL_SECRET_NAME}
      containers:
        - name: house-innovations-housnav-web
          image: ${ARTIFACTORY_IMAGE_PATH}:${GIT_SHA}
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 3
  rollbackTo:
    revision: 1
---
apiVersion: v1
kind: Service
metadata:
  name: house-innovations-housnav-web-service
spec:
  selector:
    app: house-innovations-housnav-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: house-innovations-housnav-web-route
spec:
  to:
    kind: Service
    name: house-innovations-housnav-web-service
  port:
    targetPort: 3000
